@@ -4277,7 +4277,6 @@ void KWPage::dropEvent(QDropEvent *e)
 	  repaint(false);
 	}
     }
-	   
 }
 
 /*================================================================*/
