@@ -1065,3 +1065,9 @@ Reggie, 10.4.1999:
 - Cleanups
 - Footnote/Endnote descriptions are sorted correctly now
 - Implemented correct behavior when deleting a footnote/endnote
+
+Reggie, 11.4.1999:
+------------------
+- A footnote/endnote description paragraph can't be deleted
+- footnotes/endnotes don't loose connections to the footnote/endnote description paragraphs
+  after sorting them anymore
